fix[feat]: Fix sizing on mobile social links

--- a/mkdocs_landing/css/responsivity.css
+++ b/mkdocs_landing/css/responsivity.css
@@ -15,7 +15,7 @@
 @media (pointer:coarse) {
 
     /** Header **/
-    nav#socials {
+    ul#socials {
         font-size: 4rem;
     }
 
